--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "livewire/livewire": "^2.0",
+        "rap2hpoutre/fast-excel": "^2.5",
         "spatie/laravel-permission": "^4.0",
         "watson/active": "^6.0"
     },
